# orbitx

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: keybindings.toml
assets/orbiter-data/: README.md
assets/textures/planets/: README.md
crates/orbitx-app/: Cargo.toml
crates/orbitx-app/examples/: demo_atmosphere.rs  demo_callback_billboard.rs  demo_callback_sphere.rs  demo_callback_triangle.rs  demo_camera_interaction.rs  demo_coord_camera.rs  demo_ephemeris.rs  demo_full_scene.rs  demo_lod_transition.rs  demo_saturn_ring.rs  demo_sun.rs  demo_textured_planet.rs  planet_basic.wgsl
crates/orbitx-app/src/: app.rs  ephem_bridge.rs  flight_calc.rs  input.rs  lib.rs  main.rs  scene_renderer.rs  sphere.rs  vessel.rs  vessel_mesh.rs
crates/orbitx-app/src/shader/: atmosphere.wgsl  billboard.wgsl  cloud.wgsl  corona.wgsl  planet.wgsl  ring.wgsl  sky.wgsl  sun.wgsl  vessel.wgsl
crates/orbitx-cli/: Cargo.toml
crates/orbitx-cli/src/: main.rs
crates/orbitx-cli/tests/: reproducibility.rs
crates/orbitx-config/: Cargo.toml
crates/orbitx-config/presets/: falcon9.toml  launch_scenario.toml  long_march_2f.toml  long_march_5.toml  long_march_7.toml  long_march_9.toml  saturn_v.toml
crates/orbitx-config/src/: body.rs  lib.rs  rocket.rs  scenario.rs  system.rs
crates/orbitx-demo-aero/: Cargo.toml
crates/orbitx-demo-aero/src/: main.rs
crates/orbitx-demo-landing/: Cargo.toml
crates/orbitx-demo-landing/src/: main.rs
crates/orbitx-demo-orrery/: Cargo.toml
crates/orbitx-demo-orrery/src/: main.rs
crates/orbitx-dynamics/: Cargo.toml
crates/orbitx-dynamics-ffi/: Cargo.toml  build.rs
crates/orbitx-dynamics-ffi/cpp/: oracle.h  shim.cpp
crates/orbitx-dynamics-ffi/src/: lib.rs
crates/orbitx-dynamics/src/: gravity.rs  integrator.rs  kepler.rs  lib.rs  pines.rs  planetary.rs  rigidbody.rs  rotation.rs
crates/orbitx-dynamics/tests/: ffi_oracle.rs
crates/orbitx-ephemeris/: Cargo.toml
crates/orbitx-ephemeris-ffi/: Cargo.toml  build.rs
crates/orbitx-ephemeris-ffi/cpp/: oracle.h  shim.cpp
crates/orbitx-ephemeris-ffi/src/: lib.rs
crates/orbitx-ephemeris/src/: elp82.rs  galsat.rs  lib.rs  sample.rs  tass17.rs  vsop87.rs
crates/orbitx-ephemeris/tests/: ffi_oracle.rs
crates/orbitx-flight/: Cargo.toml
crates/orbitx-flight/src/: main.rs
crates/orbitx-gfx-hud/: Cargo.toml
crates/orbitx-gfx-hud/src/: flight_state.rs  hud.rs  lib.rs  mfd.rs
crates/orbitx-launch/: Cargo.toml
crates/orbitx-launch/src/: main.rs
crates/orbitx-math/: Cargo.toml
crates/orbitx-math-ffi/: Cargo.toml  build.rs
crates/orbitx-math-ffi/cpp/: OrbiterAPI.h  orbiter_stub.h  shim.cpp
crates/orbitx-math-ffi/src/: lib.rs
crates/orbitx-math/src/: astro.rs  consts.rs  geom.rs  lib.rs  mat3.rs  mat4.rs  quat.rs  state.rs  vec3.rs  vec4.rs
crates/orbitx-math/tests/: ffi_oracle.proptest-regressions  ffi_oracle.rs
crates/orbitx-orrery/: Cargo.toml
crates/orbitx-orrery/src/: main.rs  scene.rs
crates/orbitx-render/: Cargo.toml
crates/orbitx-render/src/: camera.rs  coord.rs  lib.rs  render_graph.rs  scene.rs
crates/orbitx-scene/: Cargo.toml
crates/orbitx-scene/src/: bridge.rs  lib.rs  sim.rs
crates/orbitx-vessel/: Cargo.toml
crates/orbitx-vessel/src/: aero.rs  assembly.rs  dock.rs  fuel.rs  lib.rs  presets.rs  rcs.rs  stage.rs  tests.rs  thruster.rs  touchdown.rs  vessel.rs
crates/orbitx-viewer/: Cargo.toml
crates/orbitx-viewer/src/: bridge.rs  main.rs  scene.rs  sim.rs
docs/: KEYBINDINGS.md  ORBITER_QUIRKS.md  RENDERING.md  ROADMAP.md
