[workspace]
resolver = "2"
members = [
    "crates/orbitx-math",
    "crates/orbitx-math-ffi",
    "crates/orbitx-ephemeris",
    "crates/orbitx-ephemeris-ffi",
    "crates/orbitx-dynamics",
    "crates/orbitx-dynamics-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/jianglu/orbitx"

[workspace.dependencies]
orbitx-math = { path = "crates/orbitx-math" }
orbitx-math-ffi = { path = "crates/orbitx-math-ffi" }
orbitx-ephemeris = { path = "crates/orbitx-ephemeris" }
orbitx-ephemeris-ffi = { path = "crates/orbitx-ephemeris-ffi" }
orbitx-dynamics = { path = "crates/orbitx-dynamics" }
orbitx-dynamics-ffi = { path = "crates/orbitx-dynamics-ffi" }
proptest = "1"
cc = "1"

[profile.release]
opt-level = 3
lto = "thin"
