[workspace]
resolver = "2"
members = [
    "crates/orbitx-math",
    "crates/orbitx-math-ffi",
    "crates/orbitx-ephemeris",
    "crates/orbitx-ephemeris-ffi",
    "crates/orbitx-dynamics",
    "crates/orbitx-dynamics-ffi",
    "crates/orbitx-scene",
    "crates/orbitx-orrery",
    "crates/orbitx-flight",
    "crates/orbitx-launch",
    "crates/orbitx-vessel",
    "crates/orbitx-cli",
    "crates/orbitx-config",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/jianglu/orbitx"

[workspace.dependencies]
orbitx-math = { path = "crates/orbitx-math" }
orbitx-math-ffi = { path = "crates/orbitx-math-ffi" }
orbitx-ephemeris = { path = "crates/orbitx-ephemeris" }
orbitx-ephemeris-ffi = { path = "crates/orbitx-ephemeris-ffi" }
orbitx-dynamics = { path = "crates/orbitx-dynamics" }
orbitx-dynamics-ffi = { path = "crates/orbitx-dynamics-ffi" }
orbitx-viewer = { path = "crates/orbitx-orrery" }
orbitx-scene = { path = "crates/orbitx-scene" }
orbitx-flight = { path = "crates/orbitx-flight" }
orbitx-launch = { path = "crates/orbitx-launch" }
orbitx-vessel = { path = "crates/orbitx-vessel" }
orbitx-cli = { path = "crates/orbitx-cli" }
orbitx-config = { path = "crates/orbitx-config" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
proptest = "1"
cc = "1"

[profile.release]
opt-level = 3
lto = "thin"
