[package]
name = "orbitx-demo-aero"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "气动再入演示"

[dependencies]
orbitx-vessel.workspace = true
orbitx-dynamics.workspace = true
orbitx-math.workspace = true
orbitx-config.workspace = true
ratatui.workspace = true
crossterm.workspace = true
