[package]
name = "orbitx-demo-orrery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "多体太阳系演示（orrery）"

[dependencies]
orbitx-dynamics.workspace = true
orbitx-math.workspace = true
orbitx-config.workspace = true
orbitx-ephemeris.workspace = true
ratatui.workspace = true
crossterm.workspace = true
