[package]
name = "orbitx-dynamics-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "C++ oracle for orbitx-dynamics property tests (integrators, gravity, Pines, Kepler)"
links = "orbitx_dyn_oracle"

[build-dependencies]
cc.workspace = true

[dependencies]
orbitx-dynamics.workspace = true
