[package]
name = "orbitx-flight"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "航天器实时轨道飞行模拟器"

[dependencies]
orbitx-scene.workspace = true
orbitx-ephemeris.workspace = true
orbitx-dynamics.workspace = true
orbitx-math.workspace = true
kiss3d = "0.45"
