[package]
name = "orbitx-math-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "C++ oracle for orbitx-math property tests (compiles Orbiter's Vecmat/Astro via FFI)"
links = "orbitx_oracle"

[build-dependencies]
cc.workspace = true

[dependencies]
orbitx-math.workspace = true
