[package]
name = "orbitx-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "渲染抽象层：RenderGraph、SceneNode、CameraSystem、CoordinateBridge"

[dependencies]
orbitx-math.workspace = true
wgpu.workspace = true
glam.workspace = true
bytemuck.workspace = true
